Team colors configuration by config

--- a/teammanager.config
+++ b/teammanager.config
@@ -8,6 +8,8 @@ log: C:\Users\Andrea Rossi\eclipse-workspace\TeamManager\teammanager.log
 //teams
 team-size: 7
 team-balance-factor: 1
+team-0-color: 255,96,96
+team-1-color: 96,96,255
 
 //xml
 default-save-folder: C:\Users\Andrea Rossi\Desktop
